Fixed Text Overflow

--- a/style/style.css
+++ b/style/style.css
@@ -61,38 +61,52 @@ body {
 #right {
     padding: 1rem;
     display: grid;
-    grid-template-columns: repeat(auto-fill, 300px);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-rows: 250px;
     gap: 2rem;
     overflow: auto;
     position: relative;
 }
 
+.title,
 .author,
 .pages,
 .read {
     display: flex;
-    justify-content: start;
-    gap: .5rem;
+    text-wrap: nowrap;
+    width: 100%;
+    gap: .5rem
+}
+.title-display-container,
+.author-display-container,
+.pages-display-container{
+    display: flex;
+    text-wrap: nowrap;
+    overflow: hidden;
+    width: 100%;
+    gap: .5rem
 }
 
 .author>div:first-child,
 .pages>div:first-child,
 .read>div:first-child {
     font-weight: bold;
+    text-wrap: nowrap;
 }
 
 .book {
     background-color: rgba(0, 0, 0, .1);
     padding: 1rem;
     display: grid;
+    grid-template-columns: 100%;
     grid-template-rows: repeat(5, 1fr);
     border-radius: 1rem;
     justify-items: start;
-    align-items: start;
+    align-items: center;
     border: .2rem solid rgba(255, 255, 255, .5);
     border-left: 2rem solid skyblue;
     overflow: hidden;
+    max-width: 100%;
     animation: popIn .5s ease;
 }
 
@@ -353,5 +367,35 @@ body {
         opacity: 1;
         transform: scale(1);
         ;
+    }
+}
+
+/* SCROLL TEXT ANIMATION TEST */
+.scroll {
+    animation: scroll-left-right var(--scroll-duration, 10s) linear infinite;
+}
+@keyframes scroll-left-right {
+    0% {
+        transform: translateX(1%);
+    }
+
+    5% {
+        transform: translateX(1%);
+    }
+
+    45% {
+        transform: translate(var(--scroll-distance, -50%));
+    }
+
+    55% {
+        transform: translateX(var(--scroll-distance, -50%));
+    }
+
+    95% {
+        transform: translateX(1%);
+    }
+
+    100% {
+        transform: translateX(1%);
     }
 }
